--- a/index.html
+++ b/index.html
@@ -3,19 +3,38 @@
 
 <head>
   <title>Webové aplikace</title>
+  <!-- METATAGS -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- STYLESHEETS & SCRIPTS -->
+  <meta name="description" content="Webové aplikace - vzdělávací stránka">
+  <meta name="keywords"
+    content="Web, webová stránka, webové stránky, webová aplikace, webové aplikace, website, web app, web application">
+  <meta name="author" content="Lukáš Sukeník">
+
+  <!-- FAVICONS -->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+  <link rel="manifest" href="img/favicons/site.webmanifest">
+  <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="apple-mobile-web-app-title" content="Webov&eacute; aplikace">
+  <meta name="application-name" content="Webov&eacute; aplikace">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
+
+  <!-- STYLESHEETS, SCRIPTS, FONTS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bitter:wght@800&family=Crimson+Pro:wght@600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
   <script src="https://kit.fontawesome.com/7ffc9ccdb4.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
-  <!--<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">-->
+  <link rel="stylesheet" href="css/sal.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+  <!-- NAVIGACE -->
   <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     <a class="navbar-brand" href="/"><i class="fas fa-file-code"></i> Webové aplikace</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -43,28 +62,34 @@
     </div>
   </nav>
 
+  <!-- HEADER - HERO -->
   <header>
     <div class="container">
       <div class="row text-white">
         <div class="col-md-5 hero-text">
-          <h1 data-aos="fade-up" data-aos-duration="800">Web App</h1>
-          <p data-aos="fade-up" data-aos-duration="800" data-aos-delay="400">Webová aplikace je aplikace poskytovaná
+          <h1 data-sal="slide-up" style="--sal-duration: 0.8s; --sal-delay: 0.15s;">Web App</h1>
+          <p data-sal="slide-up" style="--sal-duration: 0.8s; --sal-delay: 0.4s;">Webová aplikace je aplikace
+            poskytovaná
             uživatelům z webového serveru přes internet nebo jinou vnitropodnikovou sít’.</p>
         </div>
         <div class="col-md-7 hero-img">
-          <img src="img/hero.png" alt="Webové aplikace - development" class="img-fluid" data-aos="fade-left"
-            data-aos-duration="1000" data-aos-delay="800" data-aos-once="true">
+          <img src="img/hero.png" alt="Webové aplikace - development" class="img-fluid" data-sal="slide-left"
+            style="--sal-duration: 1s; --sal-delay: 0.6s;">
         </div>
       </div>
     </div>
   </header>
 
+  <!-- CONTENT -->
   <main>
+    <!-- TYPY APLIKACÍ -->
     <span class="anchor" id="types"></span>
-    <section class="sec-bg-white" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1500" data-aos-once="true">
-      <h2>Typy webových aplikací</h2>  
-      <hr>
-      <div class="row">
+    <section class="sec-bg-white">
+      <div class="sec-head" data-sal="slide-up" style="--sal-duration: 0.8s; --sal-delay: 0.8s;">
+        <h2>Typy webových aplikací</h2>
+        <hr>
+      </div>
+      <div class="row" data-sal="slide-up" style="--sal-duration: 1s; --sal-delay: 1s;">
         <div class="col-lg-6">
           <h3>Vícevrstvé webové aplikace</h3>
           <p>
@@ -98,36 +123,50 @@
       </div>
     </section>
 
+    <!-- FÁZE NÁVRHU -->
     <span class="anchor" id="phases"></span>
     <section class="sec-bg-grey">
-      <h2>Fáze návrhu webových aplikací</h2>
-      <hr>
+      <div class="sec-head" data-sal="slide-up" style="--sal-duration: 0.8s; --sal-delay: 0.8s;">
+        <h2>Fáze návrhu webových aplikací</h2>
+        <hr>
+      </div>
     </section>
 
+    <!-- BEZPEČNOSTNÍ RIZIKA -->
     <span class="anchor" id="security"></span>
     <section class="sec-bg-purple">
-      <h2>Bezpečnostní rizika webových aplikací</h2>
-      <hr>
+      <div class="sec-head" data-sal="slide-up" style="--sal-duration: 0.8s; --sal-delay: 0.8s;">
+        <h2>Bezpečnostní rizika webových aplikací</h2>
+        <hr>
+      </div>
     </section>
 
+    <!-- REDAKČNÍ SYSTÉMY -->
     <span class="anchor" id="cms"></span>
     <section class="sec-bg-white">
-      <h2>Redakční systémy</h2>
-      <hr>
+      <div class="sec-head" data-sal="slide-up" style="--sal-duration: 0.8s; --sal-delay: 0.8s;">
+        <h2>Redakční systémy</h2>
+        <hr>
+      </div>
     </section>
 
+    <!-- E-COMMERCE -->
     <span class="anchor" id="ecommerce"></span>
     <section class="sec-bg-grey">
-      <h2>E-commerce</h2>
-      <hr>
+      <div class="sec-head" data-sal="slide-up" style="--sal-duration: 0.8s; --sal-delay: 0.8s;">
+        <h2>E-commerce</h2>
+        <hr>
+      </div>
     </section>
   </main>
 
-  <footer class="container-fluid text-center p-4">
-    <p class="author">Vytvořil s <i class="fas fa-heart"></i> <strong>Lukáš Sukeník</strong><br>
-      <a href="https://github.com/lukyncze">Github</a> <i class="fab fa-github"></i></p>
+  <!-- FOOTER -->
+  <footer class="container-fluid">
+    <p class="author">Vytvořil s <i class="fas fa-heart"></i> <b><a href="https://github.com/lukyncze">Lukáš
+          Sukeník</a></b></p>
   </footer>
-  <!-- SCRIPTS -->
+
+  <!-- JAVASCRIPTS -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
@@ -135,8 +174,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
     integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous">
   </script>
-  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <!--<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>-->
+  <script src="js/sal.min.js"></script>
   <script src="js/main.js"></script>
 </body>
 
