--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     href="https://fonts.googleapis.com/css2?family=Bitter:wght@800&family=Crimson+Pro:wght@600&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
   <script src="https://kit.fontawesome.com/7ffc9ccdb4.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/lightbox.css">
+  <link rel="stylesheet" href="css/lightbox.min.css">
   <link rel="stylesheet" href="css/sal.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -738,7 +738,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
     integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous">
   </script>
-  <script src="js/lightbox.js"></script>
+  <script src="js/lightbox.min.js"></script>
   <script src="js/sal.min.js"></script>
   <script src="js/main.js"></script>
 </body>
